디테일 및 carousel디자인

--- a/src/page/GameDetail/GameDetail.style.css
+++ b/src/page/GameDetail/GameDetail.style.css
@@ -3,3 +3,13 @@
     gap: 10px;
     border: 1px solid black;
 }
+
+.game-detail {
+    background-color: whitesmoke;
+}
+
+.screenshot img {
+    width: 650px;
+    height: auto;
+    border-radius: 10px;
+}
