--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.search-btn {
-    border: none;
-    outline: none;
-    border-radius: 10px;
-    padding: 10px 10px;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
 }
