--- a/src/page/Games/Games.style.css
+++ b/src/page/Games/Games.style.css
@@ -1,5 +1,14 @@
 .Games-container {
     padding: 20px;
+    text-align: center;
+}
+
+.Games {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: flex-start;
+    background-color: whitesmoke;
 }
 
 .GameCard {
@@ -9,7 +18,7 @@
     margin: 10px;
     overflow: hidden;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     transition: transform 0.3s;
     cursor: pointer;
 }
