--- a/src/components/Banner/Banner.style.css
+++ b/src/components/Banner/Banner.style.css
@@ -1,6 +1,6 @@
 .header {
     z-index: 999;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
@@ -9,6 +9,19 @@
     align-items: center;
     padding: 15px 200px;
     transition: 0.5s ease;
+    background: rgba(255, 255, 255, .1);
+    backdrop-filter: blur(10px);
+    border-bottom: 2px solid rgba(255, 255, 255, .2);
+}
+
+.header::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
 }
 
 .header .brand {
