--- a/src/page/GameDetail/GameDetail.style.css
+++ b/src/page/GameDetail/GameDetail.style.css
@@ -5,7 +5,19 @@
 }
 
 .game-detail {
-    background-color: whitesmoke;
+    text-align: center;
+    color: #fff;
+    background-color: transparent;
+}
+
+.game-detail h2 {
+    color: #fff;
+}
+
+.game-detail p {
+    width: 100%;
+    padding: 10px;
+    line-height: 20px;
 }
 
 .screenshot img {
