--- a/src/page/Home/Home.style.css
+++ b/src/page/Home/Home.style.css
@@ -2,6 +2,7 @@ section {
     padding: 100px 200px;
 }
 
+
 .Home {
     position: relative;
     color: #fff;
@@ -10,8 +11,6 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background: rgb(42, 41, 55);
-    background: linear-gradient(29deg, rgba(42, 41, 55, 1) 17%, rgba(9, 51, 121, 1) 32%, rgba(0, 212, 255, 1) 83%);
 }
 
 .Home .content {
@@ -67,4 +66,61 @@ section {
 
 .Home .media-icons a:hover {
     transform: scale(1.3);
+}
+
+.popular-games {
+    text-align: center;
+}
+
+.popular-games h2 {
+    color: white;
+    font-weight: 600;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    font-size: 2.5rem;
+}
+
+.popular-game {
+    position: relative;
+    width: 280px;
+    height: 350px;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    transition: transform 0.3s;
+    cursor: pointer;
+}
+
+.popular-game img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: transform 0.3s, filter 0.3s;
+    border-radius: 5px;
+}
+
+.popular-game:hover img {
+    transform: scale(1.1);
+    filter: brightness(70%);
+}
+
+.popular-game .overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.popular-game:hover .overlay {
+    opacity: 1;
+}
+
+.carousel-item {
+    padding: 0 10px;
+    /* Adjust padding as needed */
 }
