--- a/src/page/Games/Games.style.css
+++ b/src/page/Games/Games.style.css
@@ -1,53 +1,79 @@
-.Games-container {
-    padding: 20px;
-    text-align: center;
-}
-
 .Games {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 20px;
-    justify-content: flex-start;
-    background-color: whitesmoke;
+    padding: 20px;
 }
 
 .GameCard {
-    position: relative;
-    width: 250px;
-    height: 350px;
-    margin: 10px;
-    overflow: hidden;
+    background-color: #fff;
+    /* 카드 배경색 */
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-    transition: transform 0.3s;
-    cursor: pointer;
+    /* 모서리 둥글게 */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* 그림자 효과 */
+    overflow: hidden;
+    /* 내용 넘칠 경우 숨기기 */
+    width: 300px;
+    /* 카드 너비 */
+    transition: transform 0.3s, box-shadow 0.3s;
+    /* 호버 효과를 위한 트랜지션 */
 }
 
-.GameCard img {
+.GameCard:hover {
+    transform: translateY(-5px);
+    /* 호버 시 살짝 올라오는 효과 */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    /* 호버 시 그림자 강하게 */
+}
+
+.card-img {
     width: 100%;
-    height: 100%;
+    height: 200px;
+    /* 이미지 높이 고정 */
     object-fit: cover;
-    transition: transform 0.3s, filter 0.3s;
+    /* 이미지 비율 유지하며 채우기 */
 }
 
-.GameCard:hover img {
-    transform: scale(1.1);
-    filter: brightness(70%);
+.card-body {
+    padding: 15px;
 }
 
-.GameCard .overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    color: white;
-    padding: 20px;
-    text-align: center;
-    opacity: 0;
-    transition: opacity 0.3s;
+.card-title {
+    font-size: 1.25rem;
+    margin: 0;
+    margin-bottom: 10px;
+    color: #333;
 }
 
-.GameCard:hover .overlay {
+.card-text {
+    font-size: 0.875rem;
+    color: #666;
+    margin-bottom: 10px;
+}
 
-    opacity: 1;
+.card-details {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.detail-left {
+    font-size: 0.75rem;
+    color: #999;
+}
+
+.card-link {
+    color: #007bff;
+    /* 링크 색상 */
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.3s;
+}
+
+.card-link:hover {
+    color: #0056b3;
+    /* 호버 시 링크 색상 */
 }
