--- a/src/page/Home/Home.style.css
+++ b/src/page/Home/Home.style.css
@@ -73,7 +73,7 @@ section {
 }
 
 .popular-games h2 {
-    color: white;
+    color: #fff;
     font-weight: 600;
     letter-spacing: 4px;
     text-transform: uppercase;
