--- a/src/components/Banner/Banner.style.css
+++ b/src/components/Banner/Banner.style.css
@@ -30,6 +30,10 @@
     font-weight: 700;
     text-transform: uppercase;
     text-decoration: none;
+    z-index: 1;
+}
+
+.header .brand a {
     cursor: pointer;
 }
 
