--- a/src/page/Stores/Stores.style.css
+++ b/src/page/Stores/Stores.style.css
@@ -1,33 +1,65 @@
+.stores h1 {
+    text-align: center;
+    color: #fff;
+    margin-bottom: 20px;
+}
+
 .stores {
-    color: white;
-}
-
-.stores .store {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    padding: 10px;
-    margin: 0px 10px;
-    gap: 10px;
+    color: #fff;
+    height: 100dvh;
 }
 
-.stores .store .store-card {
-    position: relative;
-    width: 250px;
-    height: 350px;
-    margin: 10px;
-    overflow: hidden;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-    transition: transform 0.3s;
-    cursor: pointer;
-}
-
-.stores .store .store-card img {
+.stores .store-list {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 20px;
+    max-width: 1200px;
     width: 100%;
-    height: 100%;
+}
+
+.stores .store-list .store-card {
+    padding: 15px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    text-align: center;
+    color: #fff;
+    text-decoration: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 250px;
+    overflow: hidden;
+    transition: all 0.3s ease;
+}
+
+.stores .store-list .store-card:hover {
+    scale: 1.1;
+}
+
+.stores .store-list .store-card h2 {
+    margin: 10px 0;
+    font-size: 18px;
+    line-height: 1.2;
+    flex-grow: 0;
+    /* 텍스트 높이가 일정하게 유지되도록 함 */
+    max-height: 40px;
+    /* 텍스트가 길어져도 높이를 제한 */
+    overflow: hidden;
+    /* 텍스트가 너무 길면 잘림 */
+}
+
+.stores .store-list .store-card p {
+    font-weight: 700;
+}
+
+.stores .store-list .store-card img {
+    width: 150px;
+    height: 150px;
     object-fit: cover;
-    object-position: center;
-    transition: transform 0.3s,
+    /* 이미지 크기를 고정하고 잘라내기 */
 
 }
