--- a/src/page/Home/Home.style.css
+++ b/src/page/Home/Home.style.css
@@ -44,6 +44,19 @@ section {
     border-radius: 2px;
 }
 
+.Home .content img {
+    width: 500px;
+    position: absolute;
+    top: 300px;
+    right: 250px;
+    filter: brightness(1.4);
+    transition: 0.5s ease;
+}
+
+.Home .content img:hover {
+    scale: 1.2;
+}
+
 .Home .media-icons {
     z-index: 888;
     position: absolute;
@@ -123,4 +136,45 @@ section {
 .carousel-item {
     padding: 0 10px;
     /* Adjust padding as needed */
+}
+
+/*Screen Shots*/
+
+.popular-screenshots {
+    text-align: center;
+    color: #fff;
+    font-weight: 600;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    font-size: 2.3rem;
+
+}
+
+.screenshots {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.screenshots img {
+    transition: all 0.3s ease;
+}
+
+.screenshots img:hover {
+    scale: 1.2;
+}
+
+.game-screenshots {
+    position: relative;
+    width: 800px;
+    height: 350px;
+    overflow: hidden;
+    transition: transform 0.3s;
+    cursor: pointer;
+}
+
+.game-screenshots img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
