--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,13 @@
     margin: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    color: #fff;
 }
 
 .App {
-    background: rgb(42, 41, 55);
-    background: linear-gradient(29deg, rgba(42, 41, 55, 1) 17%, rgba(9, 51, 121, 1) 32%, rgba(0, 212, 255, 1) 83%);
+
+    background-image: url("/public/metaverse.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
