--- a/src/page/Creators/Creators.style.css
+++ b/src/page/Creators/Creators.style.css
@@ -22,7 +22,7 @@
     padding: 15px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: #fff;
+    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
     text-align: center;
     color: black;
 }
