--- a/src/page/Home/Home.style.css
+++ b/src/page/Home/Home.style.css
@@ -1,3 +1,17 @@
+.loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+
+    background-image: url("/public/metaverse.jpg");
+}
+
 section {
     padding: 100px 200px;
 }
