--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .App {
-
+    height: 100%;
     background-image: url("/public/metaverse.jpg");
     background-position: center;
     background-repeat: no-repeat;
