--- a/src/page/Home/Home.style.css
+++ b/src/page/Home/Home.style.css
@@ -1,3 +1,21 @@
+@keyframes appear {
+    from {
+        opacity: 0;
+        scale: 0.5;
+    }
+
+    to {
+        opacity: 1;
+        scale: 1;
+    }
+}
+
+section {
+    animation: appear 5s linear;
+    animation-timeline: view();
+    animation-range: entry 0;
+}
+
 .loading {
     position: fixed;
     top: 0;
