--- a/src/components/Banner/Banner.style.css
+++ b/src/components/Banner/Banner.style.css
@@ -69,3 +69,13 @@
 .header .navigation .navigation-items a:hover:before {
     width: 100%;
 }
+
+@media screen and (max-width: 768px) {
+    .header {
+        padding: 15px 100px;
+    }
+
+    .header .brand {}
+
+    .header .navigation .navigation-items {}
+}
