--- a/src/page/SearchResult/SearchResult.style.css
+++ b/src/page/SearchResult/SearchResult.style.css
@@ -10,32 +10,49 @@ h2 {
 }
 
 .most-popular-game {
-    margin: auto;
+    margin: 15px auto;
     width: 800px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
+    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4));
+    backdrop-filter: blur(20px);
+    padding: 0px 0px 20px 0px;
+}
 
-    border: 0.5px solid hsl(0, 0%, 50%);
-    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.1);
+h1,
+h3 {
+    text-align: center;
+    font-size: 2em;
 }
 
 .other-results {
-    padding: 10px;
     display: flex;
-    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
+    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4));
     overflow-x: scroll;
 }
 
+.other-results::-webkit-scrollbar {
+    height: 30px;
+}
+
 .other-results .game-item {
+    position: relative;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 250px;
-    height: auto;
-    padding: 20px;
+    width: 150px;
+    flex-shrink: 0;
+}
 
+.other-results .game-item img {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+}
+
+.other-results .game-item p {
+    padding: 10px;
 }
